feat: implement setup command
Co-authored-by: Jason Kim <actcrazy@gmail.com>

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,3 +1,8 @@
+changesetBaseRefs:
+- "master"
+- "origin/master"
+- "upstream/master"
+
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-rescript.cjs
     spec: bundles/@yarnpkg/plugin-rescript.js
