--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "@yarnpkg/cli": "^2",
     "@yarnpkg/core": "^2",
+    "@yarnpkg/fslib": "^2",
+    "@yarnpkg/plugin-pnp": "^2",
     "clipanion": "^2"
   },
   "devDependencies": {
