--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "experimentalDecorators": true,
+    "strict": true,
     "module": "commonjs",
     "target": "es2018",
     "lib": [
